[package]
name = "_gd"
version = "0.1.1"
edition = "2018"
include = ["gd/src/*"]

[lib]
name = "_gd"
path = "gd/src/lib.rs"
crate-type = ["cdylib"]

[target."cfg(windows)".dependencies.winapi]
version = ">=0.3"
features = ["minwindef", "minwinbase", "winnt", "consoleapi", "libloaderapi", "memoryapi", "processthreadsapi", "winuser", "winsock2"]

[dependencies.pyo3]
version = ">=0.8.5"
features = ["extension-module"]
